apps/forgejo/ssh-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: default
spec:
  entryPoints:
    - git-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-ssh
          port: 2222
